# otus_cpp_basic

./: .gitignore  LICENSE  README.md
HW2/: CMakeLists.txt  example.cpp  hello_world.cpp
HW3/: CMakeLists.txt  argument.cpp  argument.h  check_value.cpp  check_value.h  guess_number.cpp  high_scores.cpp  high_scores.h  random_value.cpp  random_value.h
HW4/: Ball.cpp  Ball.hpp
HW5/: statistics.cpp
